# rig

./: .gitignore  AGENTS.md  README.kr.md  README.md  biome.json  gt.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.claude-plugin/: marketplace.json
.cursor/commands/: create-pr-message.md
.cursor/rules/: rule.mdc  simplicity.mdc
.github/: pull_request_template.md
.notes/: chatgpt-codex-oauth-integration.md  codex-frontend-tasks.md
.opencode/commands/: extract-working-rules.md
.opencode/retrospectives/: 2026-04-11-structural-simplicity.md  2026-04-12-config-workbench-simplicity.md
.sisyphus/plans/: slash-command-select-branching.md
.wt/: settings.json
apps/desktop-app/: eslint.config.mjs  (+2 more)
apps/tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.local.conf.json
apps/tauri/src-tauri/capabilities/: default.json
apps/tauri/src-tauri/icons/: icon.icns
apps/tauri/src-tauri/src/: lib.rs  provider.rs
apps/tauri/src-tauri/src/api_key/: commands.rs  constants.rs
apps/tauri/src-tauri/src/auth/: commands.rs  mod.rs  oauth.rs  token_store.rs
apps/tauri/src-tauri/src/chat/: commands.rs
apps/tauri/src-tauri/src/font/: commands.rs
apps/tauri/src-tauri/src/migrations/: mod.rs
apps/tauri/src-tauri/src/storage/: agent.rs  channel.rs  commands.rs  config_file.rs  entities.rs  external_file.rs  message.rs  mod.rs  setting.rs  types.rs
apps/tauri/src-tauri/src/subagents/: file_editor.rs
apps/tauri/src-tauri/src/tools/: bash.rs  file_editor.rs  mod.rs  read_file.rs  write_file.rs
scripts/: new-extension.mjs
(+550 files in other folders)
