[package]
name = "ALLIN"
version = "25.99.0"
description = "Allin"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
aisdk = { version = "0.5.2", features = ["full"] }
tokio = { version = "1.49.0", features = ["full"] }
futures = "0.3.31"
dotenvy = "0.15.7"
tauri-plugin-keyring = "0.1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
open = "5"
url = "2"
reqwest = { version = "0.12", features = ["json"] }
font-kit = "0.14"
